// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit Filter"
        id="filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit Filter"
        id="filter.subTitle"
        values={Object {}}
      />
    }
    title="name"
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <FilterForm
      dataSourceId="1"
      fieldsInfo={
        Object {
          "field": Object {
            "fieldType": "fieldType",
            "filterType": Array [
              "Filter Type 1",
              "Filter Type 2",
              "Filter Type 3",
            ],
            "unique": "unique",
          },
        }
      }
      filter={
        Object {
          "datasource": Object {
            "id": "1",
            "name": "name",
          },
        }
      }
      history={
        Object {
          "goBack": [Function],
          "push": [Function],
        }
      }
      removeFilter={[Function]}
      updateFilter={[Function]}
    />
  </LoadingWrapper>
</styled.div>
`;

exports[`Filter: Component should render correctly with loader 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit Filter"
        id="filter.subTitle"
        values={Object {}}
      />
    }
    headerTitle="name"
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit Filter"
        id="filter.subTitle"
        values={Object {}}
      />
    }
    title="name"
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <FilterForm
      dataSourceId="1"
      fieldsInfo={
        Object {
          "field": Object {
            "fieldType": "fieldType",
            "filterType": Array [
              "Filter Type 1",
              "Filter Type 2",
              "Filter Type 3",
            ],
            "unique": "unique",
          },
        }
      }
      filter={
        Object {
          "datasource": Object {
            "id": "1",
            "name": "name",
          },
        }
      }
      history={
        Object {
          "goBack": [Function],
          "push": [Function],
        }
      }
      removeFilter={[Function]}
      updateFilter={[Function]}
    />
  </LoadingWrapper>
</styled.div>
`;
